# SatSolver

./: LICENSE  README.md  Sat.cabal  sat.hs  satDefs.hs  satParser.hs
