name:                SAT
version:             0.0.0.1
synopsis:            checks if a system of propositional-logic sentences is satisfiable and prints the solution (if any)
-- description:         
-- license:             
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          Carsten@gettingsharper.de
-- copyright:           
build-type:          Simple
cabal-version:       >=1.8

executable Sat
  main-is:           sat.hs
  
  -- Other library packages from which modules are imported.
  build-depends:       base == 4.6.*,
                       containers,
                       parsec == 3.1.*